--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
 <title>Hack CFA</title>
-<h1>"Welcome to Hack CFA"</h1>
+<h1>Welcome to Hack CFA</h1>
+<p>This is a brand new competition at Carnegie Mellon</p>
