--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Hack CFA</title>
 <h1 style="text-align: center;">Welcome to Hack CFA</h1>
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
-their design proposals for a new sculpture on campus that says something about the world of science. The group will then receive $1000 to fund their 
+their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund their 
 project!</p>
 <!-- Remember to put a link to the google form so that people can put in their information-->
