--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ project! The sculpture will be displayed on campus for one year (until the next 
 <p>Rules and Requirements:</p>
 <ul>Teams are made up of 4-8 students, but at least one has to be from the College of Fine Arts and at least one from the Mellon College of Science.</ul>
 <ul>Each team must submit a paragraph prosopal, a detailed sketch of the proposed sculpture with dimensions, a list of materials, a timeline of expected 
-    deadlines.</ul>
+    deadlines, and the estimated cost.</ul>
 <ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons.</ul>
 <!-- Remember to put a link to the google form so that people can put in their information-->
