--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>Hack CFA</title>
 <h1 style="text-align: center;">Welcome to Hack CFA</h1>
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
-their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund their 
-project! The sculpture will be displayed on campus for one year (until the next Hack CFA) and then be donated to a nearby school.</p>
+    their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund 
+    their project! The sculpture will be displayed on campus for one year (until the next Hack CFA) and then be donated to a nearby school.</p>
 
 <p>Rules and Requirements:</p>
 <ul>Teams are made up of 4-8 students, but at least one has to be from the College of Fine Arts and at least one from the Mellon College of Science.</ul>
 <ul>Each team must submit a paragraph prosopal, a detailed sketch of the proposed sculpture with dimensions, a list of materials, a timeline of expected 
     deadlines, and the estimated cost.</ul>
-<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons.</ul>
-<!-- Remember to put a link to the google form so that people can put in their information-->
+<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner</ul>
+<!-- Rememgber to put a link to the google form so that people can put in their information-->
