--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <ul>Teams are made up of 4-8 students, but at least one has to be from the College of Fine Arts and at least one from the Mellon College of Science.</ul>
 <ul>Each team must submit a paragraph prosopal, a detailed sketch of the proposed sculpture with dimensions, a list of materials, a timeline of expected 
     deadlines, and the estimated cost.</ul>
-<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner</ul>
+<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner.</ul>
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
