--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
 <ul>Each team must submit a paragraph prosopal, a detailed sketch of the proposed sculpture with dimensions, a list of materials, a timeline of expected 
     deadlines, and the estimated cost.</ul>
 <ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner.</ul>
+
+<a href= "Register a team here.">https://forms.gle/8CQLVkH86AxJSbMJ9</a>
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
