--- a/index.html
+++ b/index.html
@@ -12,6 +12,5 @@
     deadlines, and the estimated cost.</ul>
 <ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner.</ul>
 
-<a href= >Register a team here.</a>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link"></iframe>
+<a href= "https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link">Register a team here.</a>
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
