--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@
 
 <a href= "https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link" target="_blank">
     Register a team here.</a>
+
+<img src="paintbrush.png" alt="logo">
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
