--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:end">
 <title>Hack CFA</title>
+<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:end">
+
 <h1 style="text-align: center;">Welcome to Hack CFA</h1>
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
     their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund 
@@ -15,5 +19,5 @@
 <a href= "https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link" target="_blank">
     Register a team here.</a>
 
-<img src="paintbrush.png" alt="logo" width=50 height=60>
+
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
