--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:left">
+<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:justify">
 <title>Hack CFA</title>
-<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:right">
+<img src="paintbrush.png" alt="logo" width=50 height=60 style="text-align:justify">
 
 <h1 style="text-align: center;">Welcome to Hack CFA</h1>
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
