--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-
-<div><img src="paintbrush.png" alt="logo" width=50 height=60><title>Hack CFA</title><img src="paintbrush.png" alt="logo" width=50 height=60></div>
+title {display:inline;}
+<div><img src="paintbrush.png" alt="logo" width=50 height=60><title>Hack CFA</title>
 
 <h1 style="text-align: center;">Welcome to Hack CFA</h1>
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
