--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-title {display:inline;}
-<div><img src="paintbrush.png" alt="logo" width=50 height=60><title>Hack CFA</title>
+<title>Hack CFA</title>
 
-<h1 style="text-align: center;">Welcome to Hack CFA</h1>
+h1{display: inline;}
+<div><img src="paintbrush.png" alt="logo" width=50 height=60><h1 style="text-align: center;">Welcome to Hack CFA</h1></div>
+
+
 <p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
     their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund 
     their project! The sculpture will be displayed on campus for one year (until the next Hack CFA) and then be donated to a nearby school.</p>
