--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
-
+<head>
 <title>Hack CFA</title>
 
-h1{display: inline;}
-<div><img src="paintbrush.png" alt="logo" width=50 height=60><h1 style="text-align: center;">Welcome to Hack CFA</h1></div>
 
+<body>
+<div style="margin:0px auto; width:1200px">
+<h1 style="text-align: center" > <img src="brush.png" alt="logo"width=50 height=60> Welcome to Hack CFA <img src="brush.png" alt="logo"width=50 height=60>
+</h1>
 
-<p style="text-align: center;">This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
-    their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $1000 to fund 
+<div style="border: 2px solid black; padding: 1em; text-align: justify;">
+<p>This is a brand new competition at Carnegie Mellon sponsored by the Mellon College of Science. Students will be able to submit 
+    their design proposals for a new sculpture on campus that says something about the world of science. The winning group will then receive $3500 to fund 
     their project! The sculpture will be displayed on campus for one year (until the next Hack CFA) and then be donated to a nearby school.</p>
 
 <p>Rules and Requirements:</p>
 <ul>Teams are made up of 4-8 students, but at least one has to be from the College of Fine Arts and at least one from the Mellon College of Science.</ul>
-<ul>Each team must submit a paragraph prosopal, a detailed sketch of the proposed sculpture with dimensions, a list of materials, a timeline of expected 
-    deadlines, and the estimated cost.</ul>
+<ul>The proposed sculpture must be no larger than six feet by six feet by six feet, must be able to stand on its own, and permenantly withstand the 
+    outdoors.</ul>
+<ul>Each team must submit a paragraph prosopal, a list of materials, a timeline of expected deadlines, and the estimated cost.</ul>
+<ul>You will have to create an object in Maya or Blender, and then export it to Fusion 360 by Autodesk run in order to test your designs.</ul>
 <ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner.</ul>
+<ul>The winning team will have four months to build their project and once finished, it will be displayed for everybody on campus.</ul>
 
 <a href= "https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link" target="_blank">
     Register a team here.</a>
 
+</div>
+</div>
 
 <!-- Rememgber to put a link to the google form so that people can put in their information-->
+</body>
+</html>
