--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     outdoors.</ul>
 <ul>Each team must submit a paragraph prosopal, a list of materials, a timeline of expected deadlines, and the estimated cost.</ul>
 <ul>You will have to create an object in Maya or Blender, and then export it to Fusion 360 by Autodesk run in order to test your designs.</ul>
-<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor condiitons. Then they will decide a winner.</ul>
+<ul>The judges will then determine whether or not your prosopal is feasable and able to withstand outdoor conditons. Then they will decide a winner.</ul>
 <ul>The winning team will have four months to build their project and once finished, it will be displayed for everybody on campus.</ul>
 
 <a href= "https://docs.google.com/forms/d/e/1FAIpQLScJ5FQ-1rTqKIXgbNb7S8-3cnZ7QAOX_L6sL5QDK3ugRgxG4Q/viewform?usp=sf_link" target="_blank">
